--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,9 @@
     "purescript-halogen": "^4.0.0",
     "purescript-prelude": "^4.1.0",
     "purescript-console": "^4.1.0",
-    "purescript-effect": "^2.0.0"
+    "purescript-effect": "^2.0.0",
+    "purescript-web-socket": "^1.0.0",
+    "purescript-aff-coroutines": "^7.0.0",
+    "purescript-validation": "^4.0.0"
   }
 }
