--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "purescript-effect": "^2.0.0",
     "purescript-web-socket": "^1.0.0",
     "purescript-aff-coroutines": "^7.0.0",
-    "purescript-validation": "^4.0.0"
+    "purescript-validation": "^4.0.0",
+    "purescript-argonaut": "^4.0.1"
   }
 }
