now the table has headers

--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "purescript-aff-coroutines": "^7.0.0",
     "purescript-validation": "^4.0.0",
     "purescript-argonaut": "^4.0.1"
+  },
+  "devDependencies": {
+    "purescript-psci-support": "^4.0.0"
   }
 }
